<resources>
	<string name="app_name">List My Apps</string>
	<string name="deselect_all">Deselect all</string>
	<string name="share">Share</string>
	<string name="add">Add</string>
	<string name="remove">Remove</string>
	<string name="save">Save</string>
	<string name="help">Help</string>
	<string name="edit_templates">Template Editor</string>
	<string name="annotations">Annotations</string>
	<string-array name="templatebodyvars">
		<item>${comment}</item>
		<item>${datadir}</item>
		<item>${displayname}</item>
		<item>${firstinstalled}</item>
		<item>${lastupdated}</item>
		<item>${marketid}</item>
		<item>${packagename}</item>
		<item>${source}</item>
		<item>${tags}</item>
		<item>${targetsdk}</item>
		<item>${uid}</item>
		<item>${versioncode}</item>
		<item>${version}</item>
	</string-array>
	<string-array name="templateheaderfootervars">
		<item>${count}</item>
		<item>${now}</item>
	</string-array>
	<string-array name="stdformattitles">
		<item>Plain Text</item>
		<item>HTML List</item>
		<item>BBCode List</item>
		<item>Markdown List</item>
		<item>Market URL</item>
		<item>HTML Table</item>	
	</string-array>
	<string-array name="stdheaders">
		<item></item>
		<item>&lt;ul&gt;\n</item>
		<item>[list]\n</item>
		<item>\n</item>
		<item></item>
		<item>&lt;!DOCTYPE html&gt;\n&lt;html&gt;\n\n&lt;head&gt;\n\n    &lt;meta http-equiv=&quot;Content-Type&quot; content=&quot;text/html; charset=utf-8&quot; /&gt;\n    &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=0.7&quot; /&gt;\n    &lt;meta name=&quot;Keywords&quot; content=&quot;apps,applications,Android,HTML,table,template,templates&quot; /&gt;\n    &lt;meta name=&quot;Description&quot; content=&quot;A Table of Installed Applications&quot; /&gt;\n\n    &lt;title&gt;The Enumeration Table of Installed Applications&lt;/title&gt;\n\n    &lt;style&gt;\n        body {\n            font-family: Calibri, &quot;Lucida Sans&quot;, Helvetica, sans-serif;\n        }\n        \n        li {\n            padding: 7px;\n        }\n        \n        table,\n        th,\n        td {\n            border-collapse: collapse;\n        }\n        \n        table#main {\n            border: 1px solid black;\n            padding: 30px;\n        }\n        \n        table#main th {\n            text-align: center;\n            color: black;\n            font-weight: bold;\n            padding: 14px;\n            background-color: white;\n        }\n        \n        table#main td {\n            text-align: center;\n            color: black;\n            font-weight: normal;\n            padding: 14px;\n        }\n        \n        table#main tr:nth-child(even) {\n            background-color: white;\n        }\n        \n        table#main tr:nth-child(odd) {\n            background-color: #cccccc;\n        }\n        \n        table.stats th {\n            border: 0px solid black;\n            background-color: white;\n            color: black;\n            text-align: left;\n            width: 120px;\n            padding: 2px;\n        }\n        \n        table.stats td {\n            border: 0px solid black;\n            background-color: white;\n            color: black;\n            text-align: left;\n        }\n        \n        .right_pane {\n            text-align: right;\n            font-size: 80%;\n        }        \n    &lt;/style&gt;\n&lt;/head&gt;\n\n&lt;body&gt;\n    &lt;h1 id=&quot;top&quot; style=&quot;font-family: &apos;Gill Sans&apos;, sans-serif&quot;&gt;Installed Apps&lt;/h1&gt;\n    &lt;table class=&quot;stats&quot;&gt;\n        &lt;tr&gt;\n            &lt;th&gt;Generated:&lt;/th&gt;\n            &lt;td&gt;${now}&lt;/td&gt;\n        &lt;/tr&gt;\n        &lt;tr&gt;\n            &lt;th&gt;Total:&lt;/th&gt;\n            &lt;td&gt;${count} apps&lt;/td&gt;\n        &lt;/tr&gt;\n    &lt;/table&gt;\n    &lt;p class=&quot;right_pane&quot;&gt;&lt;a href=&quot;#bottom&quot;&gt;&#8595; Bottom &#8595;&lt;/a&gt;&lt;/p&gt;\n    &lt;br /&gt;\n    &lt;p&gt;To see the code in action, a real-time Online HTML Editor can be found at: &lt;a href=&quot;http://htmledit.squarefree.com/&quot;&gt;http://htmledit.squarefree.com/&lt;/a&gt;&lt;/p&gt;\n    &lt;br /&gt;\n    &lt;br /&gt;\n    &lt;br /&gt;\n    &lt;br /&gt;\n    &lt;br /&gt;\n    &lt;table id=&quot;main&quot; border=&quot;1px&quot; cellpadding=&quot;14&quot; style=&quot;width:99%&quot;&gt;\n        &lt;caption&gt;&lt;span style=&quot;font-family: &apos;Gill Sans&apos;, sans-serif; font-size:300%&quot;&gt;The Enumeration Table of Installed Applications&lt;/span&gt;&lt;br /&gt;\n            &lt;br /&gt;\n            &lt;br /&gt;&lt;/caption&gt;\n        &lt;thead&gt;\n            &lt;tr&gt;\n                &lt;th style=&quot;text-align:left&quot;&gt;Name&lt;/th&gt;\n                &lt;th&gt;Comment&lt;/th&gt;\n                &lt;th&gt;Data Directory&lt;/th&gt;\n                &lt;th&gt;First Installed&lt;/th&gt;\n                &lt;th&gt;Last Updated&lt;/th&gt;\n                &lt;th&gt;Market ID&lt;/th&gt;\n                &lt;th&gt;Market Link&lt;/th&gt;\n                &lt;th&gt;Package Name&lt;/th&gt;\n                &lt;th&gt;Target SDK&lt;/th&gt;\n                &lt;th&gt;UID&lt;/th&gt;\n                &lt;th&gt;Tags&lt;/th&gt;\n                &lt;th&gt;Version&lt;/th&gt;\n                &lt;th&gt;Version Code&lt;/th&gt;\n                &lt;th&gt;www&lt;/th&gt;\n                &lt;th&gt;Google Play&lt;/th&gt;\n                &lt;th&gt;F-Droid&lt;/th&gt;\n                &lt;th&gt;Search (Google)&lt;/th&gt;\n                &lt;th&gt;Search (DDG)&lt;/th&gt;\n                &lt;th style=&quot;text-align:right&quot;&gt;Name&lt;/th&gt;\n            &lt;/tr&gt;\n        &lt;/thead&gt;\n        &lt;tbody&gt;\n</item>
	</string-array>
	<string-array name="stdformats">
		<item>${displayname}\n\t${packagename}\n</item>
		<item>\u003cli\u003e \u003ca href=\"${source}\"\u003e${displayname}\u003c/a\u003e ${comment}\n</item>
		<item>[*] [url=${source}]${displayname}[/url] ${comment}\n</item>
		<item>* [${displayname}](${source}) ${comment}\n</item>
		<item>market://details?id=${packagename}\n</item>
		<item>            \u003ctr\u003e\n                \u003ctd style=\"text-align:left\"\u003e\u003cstrong\u003e${displayname}\u003c/strong\u003e\u003c/td\u003e\n                \u003ctd\u003e${comment}\u003c/td\u003e\n                \u003ctd\u003e${datadir}\u003c/td\u003e\n                \u003ctd\u003e${firstinstalled}\u003c/td\u003e\n                \u003ctd\u003e${lastupdated}\u003c/td\u003e\n                \u003ctd\u003e${marketid}\u003c/td\u003e\n                \u003ctd\u003e\u003ca href=\"market://details?id=${packagename}\"\u003eInstall\u003c/a\u003e\u003c/td\u003e\n                \u003ctd\u003e${packagename}\u003c/td\u003e\n                \u003ctd\u003e${targetsdk}\u003c/td\u003e\n                \u003ctd\u003e${uid}\u003c/td\u003e\n                \u003ctd\u003e${tags}\u003c/td\u003e\n                \u003ctd\u003e${version}\u003c/td\u003e\n                \u003ctd\u003e${versioncode}\u003c/td\u003e\n                \u003ctd\u003e\u003ca href=\"${source}\"\u003eLink\u003c/a\u003e\u003c/td\u003e\n                \u003ctd\u003e\u003ca href=\"https://play.google.com/store/apps/details?id=${packagename}\"\u003eStore\u003c/a\u003e\u003c/td\u003e\n                \u003ctd\u003e\u003ca href=\"https://f-droid.org/repository/browse/?fdid=${packagename}\"\u003eF-Droid\u003c/a\u003e\u003c/td\u003e\n                \u003ctd\u003e\u003ca href=\"https://www.google.com/search?q=${packagename}\"\u003eSearch\u003c/a\u003e\u003c/td\u003e\n                \u003ctd\u003e\u003ca href=\"https://duckduckgo.com/?q=${packagename}+%22${displayname}%22\"\u003eDDG\u003c/a\u003e\u003c/td\u003e\n                \u003ctd style=\"text-align:right\"\u003e\u003cstrong\u003e${displayname}\u003c/strong\u003e\u003c/td\u003e\n            \u003c/tr\u003e\n</item>
	</string-array>
	<string-array name="stdfooters">
		<item></item>
		<item>&lt;/ul&gt;\nList made using &lt;a href="https://play.google.com/store/apps/details?id=de.onyxbits.listmyapps"&gt;List My Apps&lt;/a&gt;</item>
		<item>[/list]\nList made using [url=https://play.google.com/store/apps/details?id=de.onyxbits.listmyapps]List My Apps[/url]</item>
		<item>\nList made using [List My Apps](https://play.google.com/store/apps/details?id=de.onyxbits.listmyapps)</item>
		<item>\n</item>
		<item>        &lt;/tbody&gt;  \n    &lt;/table&gt;\n    &lt;br /&gt;\n    &lt;br /&gt;\n    &lt;br /&gt;\n    &lt;br /&gt;\n    &lt;br /&gt;\n    &lt;br /&gt;\n    &lt;div class=&quot;right_pane&quot;&gt;&lt;a href=&quot;#bottom&quot;&gt;&#8595; Bottom &#8595;&lt;/a&gt;&#8195;&#8194;|&#8194;&#8195;&lt;a href=&quot;#top&quot;&gt;&#8593; Top &#8593;&lt;/a&gt;\n    &lt;/div&gt;\n    &lt;p&gt;This list was made using an Android app called &lt;a href=&quot;https://play.google.com/store/apps/details?id=de.onyxbits.listmyapps&quot;&gt;List My Apps&lt;/a&gt;.&lt;/p&gt;\n    &lt;div style=&quot;margin-left:1em&quot;&gt;\n        &lt;h3&gt;www&lt;/h3&gt;\n    &lt;/div&gt;\n    &lt;div style=&quot;margin-left:3em&quot;&gt;\n        &lt;h4&gt;&apos;List My Apps&apos; -app&lt;/h4&gt;\n        &lt;ul&gt;\n            &lt;li&gt;&lt;a href=&quot;https://play.google.com/store/apps/details?id=de.onyxbits.listmyapps&quot;&gt;List My Apps&lt;/a&gt; (Google Play)&lt;/li&gt;\n            &lt;li&gt;&lt;a href=&quot;http://www.onyxbits.de/listmyapps&quot;&gt;List My Apps&apos; homepage&lt;/a&gt;&lt;/li&gt;\n            &lt;li&gt;&lt;a href=&quot;http://forum.xda-developers.com/showthread.php?t=2460266&quot;&gt;List My Apps&apos; application thread&lt;/a&gt; at xda-developers.com&lt;/li&gt;\n            &lt;li&gt;&lt;a href=&quot;https://github.com/onyxbits/listmyaps&quot;&gt;List My Apps&apos; source code&lt;/a&gt; at github.com&lt;/li&gt;            \n        &lt;/ul&gt;\n        &lt;br /&gt;\n        &lt;h4&gt;Other HTML-related Apps&lt;/h4&gt;\n        &lt;ul&gt;\n            &lt;li&gt;&lt;a href=&quot;https://play.google.com/store/apps/details?id=com.aor.droidedit&quot;&gt;DroidEdit Free&lt;/a&gt; (free code editor)&lt;/li&gt;\n            &lt;li&gt;&lt;a href=&quot;https://play.google.com/store/apps/details?id=jp.ne.shira.html.viewer&quot;&gt;Local HTML Viewer&lt;/a&gt;&lt;/li&gt;\n            &lt;li&gt;&lt;a href=&quot;https://play.google.com/store/apps/details?id=org.mozilla.firefox&quot;&gt;Firefox for Android&lt;/a&gt;&lt;/li&gt;\n        &lt;/ul&gt;\n    &lt;/div&gt;\n    &lt;br /&gt;\n    &lt;br /&gt;\n    &lt;br /&gt;\n    &lt;br /&gt;\n    &lt;br /&gt;\n    &lt;p class=&quot;right_pane&quot;&gt;&lt;a href=&quot;#top&quot;&gt;&#8593; Top &#8593;&lt;/a&gt;&lt;/p&gt;\n    &lt;p&gt;[End of Line]&lt;/p&gt;\n    &lt;table id=&quot;bottom&quot; class=&quot;stats&quot;&gt;\n        &lt;tr&gt;\n            &lt;th&gt;Generated:&lt;/th&gt;\n            &lt;td&gt;${now}&lt;/td&gt;\n        &lt;/tr&gt;\n        &lt;tr&gt;\n            &lt;th&gt;Total:&lt;/th&gt;\n            &lt;td&gt;${count} apps&lt;/td&gt;\n        &lt;/tr&gt;\n    &lt;/table&gt;\n&lt;/body&gt;\n\n&lt;/html&gt;</item>
	</string-array>
	<string name="always_link">Always link to Google Play, even if the app does not come from there</string>
	<string name="lbl_format_as">Copy/Share as:</string>
	<string name="lbl_version">Version</string>
	<string name="lbl_versioncode">Version code</string>
	<string name="lbl_installed">First installed</string>
	<string name="lbl_updated">Last updated</string>
	<string name="lbl_uid">User ID</string>
	<string name="lbl_datadir">Data directory</string>
	<string name="lbl_template_name">Template Name:</string>
	<string name="hint_header">List header, may be blank</string>
	<string name="hint_item">Item format, may not be blank</string>
	<string name="hint_footer">List footer, may be blank</string>
	<string name="bytag">Select by tag</string>
	<string name="browse">browse</string>
</resources>