<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/copy"
		android:icon="@drawable/ic_action_copy"
		android:showAsAction="ifRoom|withText"
		android:title="@android:string/copy">
	</item>
	<item
		android:id="@+id/share"
		android:icon="@drawable/ic_action_share"
		android:showAsAction="ifRoom|withText"
		android:title="@string/share">
	</item>
	<item
		android:id="@+id/browse"
		android:icon="@drawable/ic_action_browse"
		android:showAsAction="ifRoom|withText"
		android:title="@string/browse">
	</item>
	<item
		android:id="@+id/select_all"
		android:icon="@drawable/ic_action_select_all"
		android:title="@android:string/selectAll">
	</item>
	<item
		android:id="@+id/bytag"
		android:title="@string/bytag">
	</item>
	<item
		android:id="@+id/deselect_all"
		android:icon="@drawable/ic_action_deselect_all"
		android:title="@string/deselect_all">
	</item>
	<item
		android:id="@+id/annotations"
		android:icon="@drawable/ic_action_annotations"
		android:title="@string/annotations">
	</item>
	<item
		android:id="@+id/edit_templates"
		android:icon="@drawable/ic_action_templates"
		android:title="@string/edit_templates">
	</item>
	<item
		android:id="@id/item_help"
		android:icon="@drawable/ic_action_help"
		android:title="@string/help">
	</item>

</menu>